# srat

./: .biome.json  .cspell.json  .docsignore  .gitignore  .lychee.toml  .markdown-link-check.json  .markdownlint-cli2.jsonc  .markdownlint.yaml  .mcp.json  .mise.toml  .pre-commit-config.yaml  .prettierignore  .ruff.toml  .taplo.toml  .vale.ini  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_VALIDATION_SETUP.md  FRONTEND_TEST_REFACTOR_SUMMARY.md  GEMINI.md  IMPLEMENTATION_PERSISTENT_NOTIFICATIONS.md  IMPLEMENTATION_REMOVED_DISKS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRIVACY.md  README.md  README2.md  README_EVENT_SYSTEM.md  SECURITY.md  SIGNALS_INTEGRATION_FINAL_STATUS.md  SIGNALS_LIBRARY_IMPLEMENTATION.md  TYPESCRIPT_6_IMPLEMENTATION_SUMMARY.md  TYPESCRIPT_DOCUMENTATION_UPDATE_SUMMARY.md  codecov.yml  config.go  config.json  go.mod  (+11 more)
.ai/: commit-rules.md  rules.md
.claude/: .gitignore  settings.local.json
.devcontainer/: Dockerfile  createTestDevices.sh  devcontainer-lock.json  devcontainer.json  postCreateCommand.sh  postStartCommand.sh  removeTestDevices.sh  updateContentCommand.sh
.gemini/: settings.json
.github/: .copilot-commit-message-instructions.md  copilot-instructions.md  copilot-rules.md  dependabot.yml  funding.yaml  pull_request_template.md  renovate.json
.kilocode/: mcp.json
.opencode/: viz-skin.json
.zed/: settings.json
backend/: .air.toml  .mise.toml  .redocly.lint-ignore.yaml  Makefile  NOTES.md  README.md
config/: configuration.yaml
custom_components/: .mise.toml  Makefile  pyproject.toml  requirements_dev.txt
docs/: ABANDONED_DEPENDENCIES_ANALYSIS.md  AUTO_UPDATE_SYSTEM.md  BUN_COMPATIBILITY.md  BUN_NODE_ALTERNATIVE.md  CORPORATE_PROXY_PKL_FIX.md  COVERAGE_IMPROVEMENT_ROADMAP.md  COVERAGE_UPDATES_IMPLEMENTATION.md  DOCUMENTATION_GUIDELINES.md  DOCUMENTATION_VALIDATION_SETUP.md  ENHANCED_BUN_MAKE_TARGETS.md  EVENT_DRIVEN_ARCHITECTURE.md  EVENT_SYSTEM_IMPLEMENTATION_COMPLETE.md  EVENT_SYSTEM_QUICK_REFERENCE.md  FUTURE_IMPROVEMENTS.md  HDIDLE_SERVICE.md  HOME_ASSISTANT_INTEGRATION.md  IMPLEMENTATION_DIFF.md  IMPLEMENTATION_SAMBA_VERSION_CHECKS.md  INDEX_VERSION_TESTS.md  ISSUE_221_ANALYSIS.md  ISSUE_573_FIX.md  MISSING_HA_INTEGRATION_DATA.md  PPROF.md  QUICK_REFERENCE.md  README_EVENT_SYSTEM.md  REFACTOR_DISKVOLUME.md  RELEASE_PROCESS.md  ROLLBAR_REACT_MIGRATION.md  SAMBA_VERSION_CHECKS.md  SECURITY_OPTIMIZATION_REVIEW.md  SETTINGS_DOCUMENTATION.md  SMART_SERVICE.md  (+28 more)
(+1369 files in other folders)
